# airs-poc

./: .gitignore  Dockerfile  README.md  project-root  railway.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py
backend/scripts/: init_static.py
backend/static/: index.html
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  index.tsx  react-app-env.d.ts
frontend/src/components/: ApiTest.css  ApiTest.js  ApiTest.tsx
frontend/src/components/RealTimeDashboard/: RealTimeDashboard.tsx  index.ts
frontend/src/components/SmartSubmissionForm/: SmartSubmissionForm.css  SmartSubmissionForm.tsx  index.ts
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  NewIssue.tsx  index.ts
frontend/src/services/: api.ts
scripts/: generate_readme.py
